Fix: Completely hide nav bar on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1103,8 +1103,7 @@ footer a:hover {
 
 @media (max-width: 768px) {
   nav {
-    padding: 0 5%;
-    height: 60px;
+    display: none;
   }
 
   nav ul {
